# glitch-game

./: CMakeLists.txt  Makefile  README.md  conanfile.txt
include/glitch/: camera.h  graphics.h  player.h  shader.h
src/: errors.cpp  main copy 2.cpp  main copy.cpp  main.cpp  shader.h  window.cpp
src/data/: world0.cpp
src/lib/context/: context.hpp
src/lib/game/: block.hpp  game.hpp  player.hpp  world.hpp
src/lib/game_objects/: block.hpp  camera.hpp  context.hpp  game.hpp  graphics_engine.hpp  player.hpp  world.hpp
src/lib/graphics/: camera.hpp  graphics_engine.hpp  shader.h
src/lib/utils/: constants.cpp  errors.cpp  window.cpp
src/shaders/: f_color.glsl  fragment.glsl  vertex.glsl
